tests/errors/sem_test_15.py
# sem_test15.py 
test = 5 / "hey"
print(test)